--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Alp Akpinar
-description: Personal website for projects
+description: Research Assistant, Boston University
